examples/test/testpolicy16830.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16830
  namespace: namespace120
spec:
  podSelector:
    matchLabels:
      key41: value3
      key12: value40
      key35: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value37
          key30: value16
      podSelector:
        matchLabels:
          key26: value8
          key17: value41
          key23: value38
